crates/sql-check-tests/tests/compile_fail/unsupported_statement.stderr
error: SQL validation error: Invalid query: Only SELECT, INSERT, UPDATE, and DELETE are supported
 --> tests/compile_fail/unsupported_statement.rs:7:21
  |
7 |     let _q = query!("CREATE TABLE test (id int)");
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
